Closed
Bug 1351795
Opened 5 years ago
Closed 5 years ago
console.timeline and timelineEnd should be removed
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox55 | --- | fixed |
People
(Reporter: domfarolino, Assigned: ben.tian)
Details
(Keywords: dev-doc-complete, good-first-bug)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36 Steps to reproduce: Currently `console.timeline` and `console.timelineEnd` are currently no-op in Firefox, and are only functional in Chrome. Chrome has committed to removing these console functions and they will not be added to the specification (https://console.spec.whatwg.org). Furthermore historical web-platform-tests have been created to ensure the non-existence of these functions here: https://github.com/w3c/web-platform-tests/pull/5259 therefore they should be removed in Firefox.
![]() |
||
Updated•5 years ago
|
Component: Untriaged → DOM
Product: Firefox → Core
Updated•5 years ago
|
Keywords: good-first-bug
Priority: -- → P2
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → btian
Comment hidden (mozreview-request) |
Assignee | ||
Updated•5 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment hidden (mozreview-request) |
Assignee | ||
Updated•5 years ago
|
Attachment #8864774 -
Flags: review?(amarchesini)
Comment 3•5 years ago
|
||
mozreview-review |
Comment on attachment 8864774 [details] Bug 1351795 - part 1: Remove console.timeline and timelineEnd. https://reviewboard.mozilla.org/r/136436/#review140018 What about markTimeline() ? Probably we should remove that as well. Can you remove that as well? And also remove noop method in console.{h,cpp} too. Same bug, separate patch, or the same patch. Thanks!
Attachment #8864774 -
Flags: review?(amarchesini) → review+
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Updated•5 years ago
|
Attachment #8865737 -
Flags: review?(amarchesini)
Comment 6•5 years ago
|
||
mozreview-review |
Comment on attachment 8865737 [details] Bug 1351795 - part 2: Remove console.markTimeline. https://reviewboard.mozilla.org/r/137360/#review140456
Attachment #8865737 -
Flags: review?(amarchesini) → review+
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Comment 9•5 years ago
|
||
Try result: https://treeherder.mozilla.org/#/jobs?repo=try&revision=b522ed2d6e1b
Keywords: checkin-needed
Comment 10•5 years ago
|
||
Marking this instantly as dev-doc-complete, as we never documented these methods on MDN anyway, therefore no docs work is needed.
Keywords: dev-doc-complete
Comment 11•5 years ago
|
||
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/594279542264 part 1: Remove console.timeline and timelineEnd. r=baku https://hg.mozilla.org/integration/autoland/rev/5a7a94f53640 part 2: Remove console.markTimeline. r=baku
Keywords: checkin-needed
Comment 12•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/594279542264 https://hg.mozilla.org/mozilla-central/rev/5a7a94f53640
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•3 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•