Bug 1351795 - part 2: Remove console.markTimeline. r=baku

MozReview-Commit-ID: EmbscFp9oD4

--HG--
extra : rebase_source : 3f620c05faf82731d384dfca369db62ae8eb871e