dom/webidl/Console.webidl
@@ -43,10 +43,6 @@ namespace console {
   void profile(any... data);
   void profileEnd(any... data);
 
-  // No-op methods for compatibility with other browsers.
-  [BinaryName="noopMethod"]
-  void markTimeline();
-
   [ChromeOnly]
   const boolean IS_NATIVE_CONSOLE = true;
 };
